Actually fixed z-indexing to make image links clickable.

--- a/marathon4/style.css
+++ b/marathon4/style.css
@@ -47,7 +47,7 @@ body {
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 0;
+    z-index: 99;
 }
 
 a {
@@ -67,11 +67,6 @@ a:visited {
 
 #links img {
     vertical-align: middle;
-    z-index: 1;
-}
-
-#links a {
-    z-index: 2;
 }
 
 #navi {
@@ -138,7 +133,7 @@ a:visited {
     border-image-source: url("img/sector1/border.png");
     border-image-slice: 111 575 128 545;
     left: 11.655vw;
-    z-index: -1;
+    z-index: 9;
 }
 
 #sector1entrance {
@@ -151,7 +146,7 @@ a:visited {
     background-image: url("img/sector2/background.gif");
     border-image-source: url("img/sector2/border.gif");
     right: 11.7vw;
-    z-index: -2;
+    z-index: 8;
 }
 
 #sector2entrance {
@@ -162,7 +157,7 @@ a:visited {
     background-image: url("img/sector3/background.gif");
     border-image-source: url("img/sector3/border.gif");
     left: 0.56vw;
-    z-index: -3;
+    z-index: 7;
 }
 
 #sector3entrance {
@@ -183,7 +178,7 @@ a:visited {
 .sector5 {
     background-image: url("img/sector5/background.gif");
     left: -10.6vw;
-    z-index: -5;
+    z-index: 6;
 }
 
 #sector5entrance {
@@ -209,7 +204,7 @@ a:visited {
     border-image-source: url("img/sector6/border.gif");
     border-image-slice: 132 112 32 128;
     right: -10.65vw;
-    z-index: -6;
+    z-index: 5;
 }
 
 #sector6entrance {
@@ -229,7 +224,7 @@ a:visited {
 
 #header {
     flex-direction: column;
-    z-index: 1;
+    z-index: 100;
 }
 
 #header img {
